# python-ggplot

./: .gitignore  CONTRIBUTING.md  README.md  Resources.md  Roadmap.md  gg_theme.py  gg_ticks.py  gg_utils.py  gg_vega.py  gg_vegatext.py  pyproject.toml  pyrightconfig.json  pytest.ini
colormaps/: color_maps.py
data/: lincoln-weather.csv  nz.csv  presidential_truncated.csv
src/: .gitignore  main.py
src/python_ggplot/: __init__.py  cairo_backend.py  collect_and_fill.py  common.py  coord.py  coord_convert.py  core_objects.py  datamancer_pandas_compat.py  embed.py  gg_drawing.py  gg_geom.py  gg_scales.py  gg_styles.py  gg_types.py  graphics_object_convert.py  graphics_objects.py  quantity_convert.py  units.py  views.py
src/python_ggplot/colormaps/: color_maps.py  maps.json
src/python_ggplot/common/: enum_literals.py  maths.py  objects.py
src/python_ggplot/core/: chroma.py  common.py  embed.py  mahts.py  maths.py  objects.py
src/python_ggplot/core/coord/: convert.py  objects.py
src/python_ggplot/core/units/: convert.py  objects.py
src/python_ggplot/gg/: constants.py  contants.py  datamancer_pandas_compat.py  drawing.py  geom.py  styles.py  theme.py  ticks.py  types.py  utils.py
src/python_ggplot/gg/geom/: base.py  fill.py  filled_geom.py  filled_stat_geom.py  tile_raster_data.py  utils.py
src/python_ggplot/gg/scales/: base.py  collect.py  collect_and_fill.py  post_process.py  values.py
src/python_ggplot/gg/styles/: config.py  utils.py
src/python_ggplot/graphics/: cairo_backend.py  convert.py  draw.py  initialize.py  objects.py  views.py
src/python_ggplot/public_interface/: add.py  aes.py  annotate.py  common.py  geom.py  ggplot.py  utils.py
tests/: __init__.py  test_grid.py  test_plots.py  test_view.py
