[project]
name = "python-ggplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "charalmapos papaloizou", email = "harry@e2e4.email" }
]
requires-python = ">=3.12"
dependencies = [
    "pycairo>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "pylint>=3.3.3",
]
