[project]
name = "python-ggplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "charalmapos papaloizou", email = "harry@e2e4.email" }
]
requires-python = ">=3.12"
dependencies = [
    "autoflake>=2.3.1",
    "pandas>=2.2.3",
    "pycairo>=1.27.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipdb>=0.13.13",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "pyflakes>=3.2.0",
    "pylint>=3.3.3",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "python-lsp-server>=1.12.0",
    "ruff>=0.9.3",
]
